src/test/ui/occurs-check.stderr
error[E0308]: mismatched types
  --> $DIR/occurs-check.rs:5:9
   |
LL |     f = box f;
   |         ^^^^^
   |         |
   |         cyclic type of infinite size
   |         help: try using a conversion method: `box f.to_string()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
